--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Visualization Assignment</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        h1 { color: #333; }
-    </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a sample GitHub Page for my visualization assignment.</p>
-    <script>
-        console.log("Hello, World!");
-    </script>
+    <h1>Welcome to My Visualization Assignment Page</h1>
+    <p>You can download my presentation here:</p>
+    <a href="presentation.pptx" download>Download Presentation</a>
 </body>
 </html>
