--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Visualization Assignment</title>
+    <title>My Presentation</title>
 </head>
 <body>
-    <h1>Welcome to My Visualization Assignment Page</h1>
-    <p>You can download my presentation here:</p>
-    <a href="presentation.pptx" download>Download Presentation</a>
+    <h2>My Presentation</h2>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSC6BlWCsW8uwNl0ixIBvnaJ3bTneP8wm6qw8GPyz6OtYPR9beDRID4LnN7rY4a_g/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <iframe src="嵌入的URL" width="700" height="400" allowfullscreen></iframe>
 </body>
 </html>
